# dropbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dropbox.cpp  Dropbox.sln  Dropbox.vcxproj  Dropbox.vcxproj.filters  README.md  sketches.txt
.github/workflows/: c-cpp.yml
client/: CMakeLists.txt  client.cpp  client.hpp  inotify.cpp  inotify.hpp  main.cpp  sem.cpp  user_input.cpp  user_input.hpp
common/: CMakeLists.txt  connections.cpp  connections.hpp  constants.hpp  exceptions.hpp  inotify.cpp  inotify.hpp  list_directory.cpp  list_directory.hpp  utils.hpp
common/communication/: CMakeLists.txt  commands.cpp  commands.hpp  exchange_aggregate.cpp  exchange_aggregate.hpp  packet.cpp  packet.hpp  protocol.cpp  protocol.hpp  socket_stream.cpp  socket_stream.hpp
common/composite/: Base.hpp  CMakeLists.txt  Receiver.hpp  Sender.cpp  Sender.hpp
common/networking/: Addr.hpp  CMakeLists.txt  Socket.cpp  Socket.hpp  SocketStream.cpp  SocketStream.hpp  addr.hpp  socket.cpp  socket.hpp
common/tabulate/: asciidoc_exporter.hpp  cell.hpp  color.hpp  column.hpp  exporter.hpp  format.hpp  latex_exporter.hpp  markdown_exporter.hpp  printer.hpp  row.hpp  table.hpp  table_internal.hpp  utf8.hpp
server/: CMakeLists.txt  ClientComposite.cpp  ClientComposite.hpp  ClientHandler.cpp  ClientHandler.hpp  ClientPool.cpp  ClientPool.hpp  CompositeInterface.hpp  Server.cpp  Server.hpp  client_aggregate.cpp  client_aggregate.hpp  client_composite.cpp  client_composite.hpp  client_composition.cpp  client_composition.hpp  client_handler.cpp  client_handler.hpp  client_pool.cpp  client_pool.hpp  composite_interface.hpp  inotify.cpp  inotify.hpp  main.cpp  server.cpp  server.hpp
server/election/: Election.cpp  Election.hpp  Ring.cpp  Ring.hpp  election.cpp  election.hpp  ring.cpp  ring.hpp
server/replica/: Backup.cpp  Backup.hpp  BackupHandler.cpp  BackupHandler.hpp  MainLoopReply.hpp  Primary.cpp  Primary.hpp  backup.cpp  backup.hpp  primary.cpp  primary.hpp
sync_dir_arthur/: t.txt  teste.txt
